[package]
name = "bw_verifier"
version = "0.3.1"
description= "The application which verifies and benchmarks KhulnaSoft Framework Benchmark test implementations."
authors = ["Md Sulaiman <admin@khulnasoft.com>"]
license = "BSD-3-Clause"
edition = "2021"

[dependencies]
bson = "1.0"
colored = "1.9.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
curl = "0.4.29"
thiserror = "1.0.19"
html5ever = "0.25.1"
strum = "0.18.0"
strum_macros = "0.18.0"
threadpool = "1.8.1"
num_cpus = "1.13.0"
chrono = "0.4.19"
regex = "1.5.4"

# databases required for verifications
postgres = "0.19.2"
mysql = "18.2.0"
[dependencies.mongodb]
version = "0.11.0"
default-features = false
features = ["sync"]
